Change routes and add navbar

--- a/app/views/climate_control_units/_form.html.haml
+++ b/app/views/climate_control_units/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @climate_control_unit do |f|
+= form_for [@room, @climate_control_unit] do |f|
   - if @climate_control_unit.errors.any?
     #error_explanation
       %h2= "#{pluralize(@climate_control_unit.errors.count, "error")} prohibited this climate_control_unit from being saved:"
