--- a/app/views/data_points/show.html.haml
+++ b/app/views/data_points/show.html.haml
@@ -13,6 +13,6 @@
   %b Node:
   = @data_point.node
 
-= link_to 'Edit', edit_data_point_path(@data_point)
+= link_to 'Edit', edit_room_data_point_path(@data_point)
 \|
-= link_to 'Back', data_points_path
+= link_to 'Back', room_data_points_path
