--- a/app/views/data_points/_form.html.haml
+++ b/app/views/data_points/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @data_point do |f|
+= form_for [@room, @data_point] do |f|
   - if @data_point.errors.any?
     #error_explanation
       %h2= "#{pluralize(@data_point.errors.count, "error")} prohibited this data_point from being saved:"
