--- a/app/views/slots/_form.html.haml
+++ b/app/views/slots/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @slot do |f|
+= form_for [@room, @node, @slot] do |f|
   - if @slot.errors.any?
     #error_explanation
       %h2= "#{pluralize(@slot.errors.count, "error")} prohibited this slot from being saved:"
