--- a/app/views/slots/show.html.haml
+++ b/app/views/slots/show.html.haml
@@ -10,6 +10,6 @@
   %b Climate control unit:
   = @slot.climate_control_unit
 
-= link_to 'Edit', edit_slot_path(@slot)
+= link_to 'Edit', edit_room_node_slot_path(@slot)
 \|
-= link_to 'Back', slots_path
+= link_to 'Back', room_node_slots_path
