--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@room, @room] do |f|
+= form_for @room do |f|
   - if @room.errors.any?
     #error_explanation
       %h2= "#{pluralize(@room.errors.count, "error")} prohibited this room from being saved:"
@@ -10,4 +10,4 @@
     = f.label :name
     = f.text_field :name
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-success'
