--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,9 +1,11 @@
+%br
+
 %p#notice= notice
 
 %p
   %b Name:
   = @room.name
 
-= link_to 'Edit', edit_room_path(@room)
+= link_to 'Edit', edit_room_path(@room), class: 'btn btn-warning'
 \|
-= link_to 'Back', rooms_path
+= link_to 'Back', rooms_path, class: 'btn btn-primary'
