--- a/app/views/data_points/show.html.haml
+++ b/app/views/data_points/show.html.haml
@@ -1,3 +1,5 @@
+%br
+
 %p#notice= notice
 
 %p
@@ -13,6 +15,4 @@
   %b Node:
   = @data_point.node
 
-= link_to 'Edit', edit_room_data_point_path(@data_point)
-\|
-= link_to 'Back', room_data_points_path
+= link_to 'Back', room_data_points_path, class: 'btn btn-primary'
