--- a/app/views/nodes/show.html.haml
+++ b/app/views/nodes/show.html.haml
@@ -10,6 +10,6 @@
   %b Room:
   = @node.room
 
-= link_to 'Edit', edit_room_node_path(@node)
+= link_to 'Edit', edit_room_node_path(@node), class: 'btn btn-warning'
 \|
-= link_to 'Back', room_nodes_path
+= link_to 'Back', room_nodes_path, class: 'btn btn-primary'
