--- a/app/views/nodes/edit.html.haml
+++ b/app/views/nodes/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @node
+= link_to 'Show', @node, class: 'btn btn-primary'
 \|
-= link_to 'Back', room_nodes_path
+= link_to 'Back', room_nodes_path, class: 'btn btn-primary'
