Styling changes and bugfixes

--- a/app/views/climate_control_units/_form.html.haml
+++ b/app/views/climate_control_units/_form.html.haml
@@ -13,10 +13,7 @@
     = f.label :type
     = f.number_field :type
   .field
-    = f.label :room
-    = f.text_field :room
-  .field
     = f.label :slot
     = f.text_field :slot
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-success'
