--- a/app/views/climate_control_units/index.html.haml
+++ b/app/views/climate_control_units/index.html.haml
@@ -18,10 +18,10 @@
         %td= climate_control_unit.type
         %td= climate_control_unit.room
         %td= climate_control_unit.slot
-        %td= link_to 'Show', climate_control_unit
-        %td= link_to 'Edit', edit_room_climate_control_unit_path(climate_control_unit)
-        %td= link_to 'Destroy', climate_control_unit, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Show', climate_control_unit, class: 'btn btn-primary'
+        %td= link_to 'Edit', edit_room_climate_control_unit_path(climate_control_unit), class: 'btn btn-warning'
+        %td= link_to 'Destroy', climate_control_unit, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
 
 %br
 
-= link_to 'New Climate control unit', new_room_climate_control_unit_path
+= link_to 'New Climate control unit', new_room_climate_control_unit_path, class: 'btn btn-success'
