--- a/app/views/slots/_form.html.haml
+++ b/app/views/slots/_form.html.haml
@@ -16,4 +16,4 @@
     = f.label :climate_control_unit
     = f.text_field :climate_control_unit
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-success'
