--- a/app/views/climate_control_units/edit.html.haml
+++ b/app/views/climate_control_units/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @climate_control_unit
+= link_to 'Show', room_climate_control_unit_path(@climate_control_unit), class: 'btn btn-primary'
 \|
-= link_to 'Back', room_climate_control_units_path
+= link_to 'Back', room_climate_control_units_path, class: 'btn btn-primary'
