--- a/app/views/climate_control_units/new.html.haml
+++ b/app/views/climate_control_units/new.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-= link_to 'Back', room_climate_control_units_path
+= link_to 'Back', room_climate_control_units_path, class: 'btn btn-primary'
