--- a/app/views/climate_control_units/show.html.haml
+++ b/app/views/climate_control_units/show.html.haml
@@ -13,6 +13,6 @@
   %b Slot:
   = @climate_control_unit.slot
 
-= link_to 'Edit', edit_room_climate_control_unit_path(@climate_control_unit)
+= link_to 'Edit', edit_room_climate_control_unit_path(@climate_control_unit), class: 'btn btn-warning'
 \|
-= link_to 'Back', room_climate_control_units_path
+= link_to 'Back', room_climate_control_units_path, class: 'btn btn-primary'
