--- a/app/views/slots/edit.html.haml
+++ b/app/views/slots/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @slot
+= link_to 'Show', room_node_slot_path(@slot), class: 'btn btn-primary'
 \|
-= link_to 'Back', room_node_slots_path
+= link_to 'Back', room_node_slots_path, class: 'btn btn-primary'
