--- a/app/views/targets/_form.html.haml
+++ b/app/views/targets/_form.html.haml
@@ -12,8 +12,5 @@
   .field
     = f.label :value
     = f.text_field :value
-  .field
-    = f.label :room
-    = f.text_field :room
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-success'
