--- a/app/views/nodes/_form.html.haml
+++ b/app/views/nodes/_form.html.haml
@@ -12,5 +12,8 @@
   .field
     = f.label :api_key
     = f.text_field :api_key
+  .field
+    = f.label :outside
+    = f.check_box :outside
   .actions
     = f.submit 'Save', class: 'btn btn-success'
