--- a/app/views/data_points/show.html.haml
+++ b/app/views/data_points/show.html.haml
@@ -15,4 +15,4 @@
   %b Node:
   = @data_point.node
 
-= link_to 'Back', room_data_points_path, class: 'btn btn-primary'
+= link_to 'Back', room_data_points_path(@room), class: 'btn btn-primary'
