--- a/app/views/data_points/index.html.haml
+++ b/app/views/data_points/index.html.haml
@@ -18,5 +18,5 @@
         %td= data_point.node
         %td
           .btn-group
-            = link_to 'Show', data_point, class: 'btn btn-primary'
-            = link_to 'Destroy', data_point, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+            = link_to 'Show', room_data_point_path(@room, data_point), class: 'btn btn-primary'
+            = link_to 'Destroy', room_data_point_path(@room, data_point), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
