--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,3 +31,6 @@
                 = link_to 'Climate control units', room_climate_control_units_path(@room)
     .container
       = yield
+    %footer.navbar.navbar-fixed-bottom
+      .container
+        = "HardCode Wizards #{Time.now.year}"
