--- a/app/views/nodes/index.html.haml
+++ b/app/views/nodes/index.html.haml
@@ -1,14 +1,12 @@
 %h1 Listing nodes
 
-%table
+%table.table
   %thead
     %tr
       %th Capabilities
       %th Api key
       %th Room
-      %th
-      %th
-      %th
+      %th Actions
 
   %tbody
     - @nodes.each do |node|
@@ -16,10 +14,12 @@
         %td= node.capabilities
         %td= node.api_key
         %td= node.room
-        %td= link_to 'Show', node, class: 'btn btn-primary'
-        %td= link_to 'Edit', edit_room_node_path(node), class: 'btn btn-warning'
-        %td= link_to 'Destroy', node, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+        %td
+          .btn-group
+            = link_to 'Show', room_node_path(@room, node), class: 'btn btn-primary'
+            = link_to 'Edit', edit_room_node_path(@room, node), class: 'btn btn-warning'
+            = link_to 'Destroy', room_node_path(@room, node), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
 
 %br
 
-= link_to 'New Node', new_room_node_path, class: 'btn btn-success'
+= link_to 'New Node', new_room_node_path(@room), class: 'btn btn-success'
