--- a/app/views/nodes/show.html.haml
+++ b/app/views/nodes/show.html.haml
@@ -12,4 +12,4 @@
 
 = link_to 'Edit', edit_room_node_path(@node), class: 'btn btn-warning'
 \|
-= link_to 'Back', room_nodes_path, class: 'btn btn-primary'
+= link_to 'Back', room_nodes_path(@room), class: 'btn btn-primary'
