--- a/app/views/slots/_form.html.haml
+++ b/app/views/slots/_form.html.haml
@@ -7,8 +7,8 @@
           %li= message
 
   .field
-    = f.label :identifier
-    = f.text_field :identifier
+    = f.label :kind
+    = f.select :kind, Slot.kinds.keys
   .field
     = f.label :climate_control_unit
     = f.text_field :climate_control_unit
