--- a/app/views/slots/new.html.haml
+++ b/app/views/slots/new.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-= link_to 'Back', room_node_slots_path, class: 'btn btn-primary'
+= link_to 'Back', room_node_slots_path(@room, @node), class: 'btn btn-primary'
