--- a/app/views/targets/_form.html.haml
+++ b/app/views/targets/_form.html.haml
@@ -7,8 +7,8 @@
           %li= message
 
   .field
-    = f.label :type
-    = f.number_field :type
+    = f.label :kind
+    = f.select :kind, Target.kinds.keys
   .field
     = f.label :value
     = f.text_field :value
