--- a/app/views/targets/edit.html.haml
+++ b/app/views/targets/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @target, class: 'btn btn-primary'
+= link_to 'Show', room_target_path(@room, @target), class: 'btn btn-primary'
 \|
-= link_to 'Back', room_targets_path, class: 'btn btn-primary'
+= link_to 'Back', room_targets_path(@room), class: 'btn btn-primary'
