--- a/app/views/targets/new.html.haml
+++ b/app/views/targets/new.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-= link_to 'Back', room_targets_path, class: 'btn btn-primary'
+= link_to 'Back', room_targets_path(@room), class: 'btn btn-primary'
