--- a/app/views/climate_control_units/show.html.haml
+++ b/app/views/climate_control_units/show.html.haml
@@ -4,8 +4,8 @@
   %b Name:
   = @climate_control_unit.name
 %p
-  %b Type:
-  = @climate_control_unit.type
+  %b Kind:
+  = @climate_control_unit.kind
 %p
   %b Room:
   = @climate_control_unit.room
