--- a/app/views/climate_control_units/index.html.haml
+++ b/app/views/climate_control_units/index.html.haml
@@ -4,7 +4,7 @@
   %thead
     %tr
       %th Name
-      %th Type
+      %th Kind
       %th Room
       %th Slot
       %th Actions
@@ -13,12 +13,14 @@
     - @climate_control_units.each do |climate_control_unit|
       %tr
         %td= climate_control_unit.name
-        %td= climate_control_unit.type
+        %td= climate_control_unit.kind
         %td= climate_control_unit.room
         %td= climate_control_unit.slot
-        %td= link_to 'Show', room_climate_control_unit_path(@room, climate_control_unit), class: 'btn btn-primary'
-        %td= link_to 'Edit', edit_room_climate_control_unit_path(@room, climate_control_unit), class: 'btn btn-warning'
-        %td= link_to 'Destroy', room_climate_control_unit_path(@room, climate_control_unit), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+        %td
+          .btn-group
+            = link_to 'Show', room_climate_control_unit_path(@room, climate_control_unit), class: 'btn btn-primary'
+            = link_to 'Edit', edit_room_climate_control_unit_path(@room, climate_control_unit), class: 'btn btn-warning'
+            = link_to 'Destroy', room_climate_control_unit_path(@room, climate_control_unit), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
 
 %br
 
